# mold

./: .dockerignore  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  getmoldsh.sh  mold.sh  mold.toml  mold.yaml  moldfile  test.yaml
.github/workflows/: linux.yml  mac.yml  release.yml  rust.yml  windows.yml
mold/: lint.sh  python.py  shell.sh  staticbuild.sh
src/: cargo.rs  expr.rs  file.rs  lang.rs  lib.rs  main.rs  mold.pest  remote.rs  serde.rs  util.rs
