[package]
name = "mold"
version = "0.6.1"
authors = [
  "John Weachock <jweachock@gmail.com>",
  "Philip Dexter <philip.dexter@gmail.com>",
]
edition = "2018"

[dependencies]
clap = "2.33"
colored = "1.8"
dirs = "2.0"
env_logger = "0.6"
exitcode = "1.1"
exitfailure = "0.5"
failure = "0.1"
git2 = "0.8"
indexmap = {version = "1.0"}
log = "0.4"
pest = "2.1.3"
pest_derive = "2.1.0"
semver = "0.9"
shell-words = "0.1.0"
shellexpand = "1.1.1"
spinners = "1.2"
structopt = "0.3"

[[bin]]
name = "mold"
path = "src/main.rs"
